fix: 加载load样式修改

--- a/src/views/layout/components/breadcrumb/style.module.less
+++ b/src/views/layout/components/breadcrumb/style.module.less
@@ -1,6 +1,6 @@
 .breadcrumb {
   height: 40px;
-  background-color: #f6f9fc;
+  background-color: #fff;
   border-bottom: 1px solid #eee;
   display: flex;
   padding: 0 10px;
