--- a/src/views/layout/components/tab/style.module.less
+++ b/src/views/layout/components/tab/style.module.less
@@ -3,7 +3,7 @@
   display: flex;
   user-select: none;
   justify-content: flex-start;
-  background-color: #f6f9fc;
+  background-color: #fff;
   .tab-item {
     height: 40px;
     text-align: center;
@@ -14,12 +14,21 @@
     cursor: pointer;
     &-close {
       margin-left: 10px;
+      svg {
+        transition: 0.2s ease;
+      }
+      &:hover {
+        svg {
+          transform: scale(1.3);
+        }
+      }
     }
   }
-  .tab-item:hover {
+  .tab-item:not(.tab-item-active):hover {
     color: @primary-color;
   }
   .tab-item-active {
-    background-color: #fff;
+    background-color: @primary-color;
+    color: #fff;
   }
 }
