fix: 登录页编写，header用户信息编写

--- a/src/views/layout/components/header/style.module.less
+++ b/src/views/layout/components/header/style.module.less
@@ -1,5 +1,6 @@
 .header {
   padding: 0;
+  background-color: rgb(39, 34, 102);
 }
 
 // logo样式
@@ -16,5 +17,22 @@
     color: #fff;
     font-size: 20px;
     background: rgba(255, 255, 255, 0.3);
+  }
+}
+
+// 用户菜单样式
+.userMenu {
+  float: right;
+  margin-top: 14px;
+  .wrapper {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    color: #fff;
+    span {
+      margin-left: 10px;
+      height: 20px;
+      line-height: 20px;
+    }
   }
 }
