--- a/src/views/dashboard/home/style.module.less
+++ b/src/views/dashboard/home/style.module.less
@@ -9,3 +9,21 @@
     padding: 20px 10px;
   }
 }
+
+.upload {
+  position: relative;
+  display: inline-block;
+  padding: 8px 15px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: @primary-color;
+  input[type='file'] {
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
